--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng-ssr",
+  "name": "angular-ssr-template",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:ng-ssr": "node dist/ng-ssr/server/server.mjs"
+    "serve:ssr:angular-ssr-template": "node dist/angular-ssr-template/server/server.mjs"
   },
   "private": true,
   "dependencies": {
